[package]
name = "site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
log = "0.4.20"
reqwest = "0.11.24"
ron = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
strum = { version = "0.25.0", features = ["derive"] }
wasm-bindgen-futures = "0.4.41"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"

[profile.release]
opt-level = 'z'
lto = "thin"
